[package]
name = "bve-pid-ato"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bveats-rs = { path = "./bveats-rs/"}
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", ] }

[build]
target = "x86_64-pc-windows-gnu"